--- a/css/main.css
+++ b/css/main.css
@@ -5,18 +5,18 @@ html {
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	font-size: 1em;
 }
 
 .container{
-	max-width: 599px;
-	margin: 0 auto;
+	max-width: 1200px;
+	width: 90%;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 
 h1,
@@ -27,129 +27,100 @@ h4 {
 	text-transform: uppercase;
 	font-weight: 700;
 }
-h1 {
-	font-size: 1.875empx;
-}
-h2 {
-    font-size: 1.5em;
-}
-h3 {
-	font-size: 1.125em;
-}
-h4 {
-	font-size: 0.75em;
-}
+
 
 p {
 	font-size: 0.875em;
 	line-height: 21px;
-    padding: 0 0;
 }
+
+ul {
+	margin: 0;
+}
+
 
 /*The widths are in a percentage!*/
 header {
+	border-bottom: 3px solid #77a466;
+	text-align: center;
+	width: 100%; 
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 380px;
-	width: 90%; 
-	margin: 0 auto;
-	padding-top: 38px;
+	flex-flow: row wrap;
 }
 
 header h1 {
+	font-size: 1.875em;
 	margin: 0;	
+	padding: 38px 20px 20px 20px;
 	border-bottom: 3px solid #77a466;
-	padding-bottom: 20px;
+	width: 100%;
 }
+
 header h1 span {
 	color: #77a466;
-	padding-right: 10px;
 }
 
 header nav {
+	padding: 20px 0;
+	width: 100%;
 }
 
 header nav ul {
 	margin: 0;
-	padding: 15px;
+	padding: 0;
 }
+
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 0.875em;
-	padding: 15px 10px;
-	display: block;
-	text-align: center;
+	padding: 10px 0;
+	list-style: none;
 }
-header nav ul li a{
+
+header nav ul li a {
 	text-decoration: none;
-	color:#77a466;
+	color: #77a466;
 }
 
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center; 
+	flex-flow: row wrap;
+}
+	
+.main-image {
+	width: 100%;
 }
 
-.main-image {
-	height: auto;
-	margin-left: 20px;
-	
-}
 .main-image img {
-	width: 90%;
-	border-top: 3px solid #77a466;
+	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-	height: auto;
-	margin: 20px 5px;
-}
 .main-title h3 {
 	text-align: left;
-	padding: 5px 0 25px 0;
+	padding: 5px 0;
 	color: #77a466;
-	margin: 0 25px;
-	letter-spacing: 1px;
+	font-size: 1.125em;
 }
+
 .main-title p {
 	padding: 0;
 	font-size: 1em;
-	line-height: 30px;
-	margin: 0 25px;
+	line-height: 1.5625;
 }
 
 .section-one,
 .section-two,
 .section-three {
-	width: 90%;
-	height: auto;
+	width: 100%;
 	border-top: 1px solid #eee;
-	margin: 0 25px;
-	/*for desktop add float: left; */
-}
-
-.section-one h4 {
-	padding: 10px 0;
-}
-
-.section-two {
-	/*add for desktop - border-left: 1px solid #eee;
-	border-right: 1px solid #eee;*/
-}
-
-.section-two h4,
-.section-three h4 {
-	padding: 10px 0;
-	/*change for desktop - padding: 10px 30px;*/
 }
 
 .menu {
@@ -164,28 +135,74 @@ header nav ul li a{
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 21px;
+	line-height: 1.3125;
 }
 
 .address {
 	font-size: 1em;
-	line-height: 24px;
+	line-height: 1.5;
 }
 
 /*The widths are in a percentage!*/
 footer {
+	border-top: 3px solid #eee;
+	text-align: center;
+	width: 100%;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center; 
-	height: 50px;
-	border-top: 3px solid #eee;
-	margin: 0 auto;
-	clear: both;
-	text-align: center;
+	flex-flow: row wrap;
+	
 }
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
 	color: #77a466;
+	font-size: .875em;
 }
+
+@media only screen and (min-width:768px) {
+	.bottom-section{
+		justify-content: space-between; 
+		align-items: flex-start;
+		border-top: 1px solid #eee;
+	}
+
+	.section-one,
+	.section-two, 
+	.section-three {
+		border-top: none;
+		flex-basis: 30%;
+	}
+	.section-two {
+		border-left: 1px solid #eee;
+		border-right: 1px solid #eee;
+		padding: 0 20px;
+	}
+}
+
+
+
+
+@media only screen and (min-width:1200px) {
+	header {
+		justify-content: space-between;
+	}
+
+	header h1 {
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left;
+	}
+
+	header nav {
+		width: 40%;
+	}
+
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
+}
+
